Source/WebCore/html/HTMLMediaElement.h
@@ -458,6 +458,10 @@ private:
     
     virtual void mediaVolumeDidChange() OVERRIDE;
 
+#if ENABLE(PAGE_VISIBILITY_API)
+    virtual void visibilityStateChanged() OVERRIDE;
+#endif
+
     virtual void updateDisplayState() { }
     
     void setReadyState(MediaPlayer::ReadyState);
@@ -621,7 +625,7 @@ private:
     bool isAutoplaying() const { return m_autoplaying; }
 
 #if PLATFORM(MAC)
-    void updateDisableSleep();
+    void updateSleepDisabling();
     bool shouldDisableSleep() const;
 #endif
 
@@ -730,6 +734,9 @@ private:
     bool m_completelyLoaded : 1;
     bool m_havePreparedToPlay : 1;
     bool m_parsingInProgress : 1;
+#if ENABLE(PAGE_VISIBILITY_API)
+    bool m_isDisplaySleepDisablingSuspended : 1;
+#endif
 
 #if ENABLE(VIDEO_TRACK)
     bool m_tracksAreReady : 1;
