Source/WebCore/page/Page.cpp
@@ -1244,7 +1244,7 @@ void Page::setVisibilityState(PageVisibilityState visibilityState, bool isInitia
             documents.append(*frame->document());
 
         for (size_t i = 0, size = documents.size(); i < size; ++i)
-            documents[i]->dispatchEvent(Event::create(eventNames().visibilitychangeEvent, false, false));
+            documents[i]->visibilityStateChanged();
     }
 #endif
 
